<resources>
    <string name="app_name">QA Test</string>

    <string name="title_connect_parrot"><b>Una nueva forma de conectar</b></string>
    <string name="title_connect_here">Conéctate aquí</string>

    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>

    <string name="category_product_count">%d productos</string>

    <!-- Login -->
    <string name="login_button">Iniciar Sesión</string>

    <!-- Detail -->
    <string name="detail_description">Descripción:</string>
    <string name="detail_available">Producto disponible</string>
    <string name="detail_unavailable">Producto no disponible</string>

    <!-- Errors -->
    <string name="error_session_expired">Tu sesión ha expirado</string>
    <string name="error_update_product">Error al actualizar el producto</string>
    <string name="error_load_products">Error al cargar los productos</string>
    <string name="error_login">Error al iniciar sesión</string>

</resources>
